<resources>
    <string name="app_name">Biblioteca GEDAI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="minha_colecao">Minha coleção</string>
    <string name="adicionar">Adicionar</string>


    <string name="titulo">Título:</string>
    <string name="autor">Autor:</string>
    <string name="resumo">Resumo:</string>
    <string name="avaliacao">Avaliação:</string>
    <string name="inserir_imagem">+</string>
    <string name="classificacao">Classificação:</string>
    <string name="cutter">Cutter:</string>
    <string name="observacao">Observações:</string>

    <string name="registro_salvo">Registro salvo com sucesso!</string>
    <string name="erro_salvar">Erro ao salvar!</string>
    <string name="registro_removido">Registro removido com sucesso!</string>

    <string name="editar">Editar</string>
    <string name="salvar">Salvar</string>
    <string name="remover">Remover</string>

    <string name="confirmacao_exclusao_livro">Deseja realmente remover o livro?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sobre">Sobre</string>
    <string name="sobre2">Grupo de Estudos de Desenvolvimento Android Interativo</string>
    <string name="gedai">GEDAI</string>
    <string name="sair">Sair</string>
    <string name="integrantes">INTEGRANTES</string>
    <string name="ricardo">Coordenador: Ricardo Werlang (ricardo.gti@seifai.edu.br)</string>
    <string name="pesquisadores">PESQUISADORES</string>
    <string name="marcelo">Bolsista: Marcelo Sommer (marcelo_ipsc@hotmail.com )</string>
    <string name="andreia">Voluntária: Adréia Marisa Gemmer (andreia.marisa@live.com)</string>
    <string name="cleiton">Voluntário: Cleiton Lenkner (cleiton.lenkner@hotmail.com)</string>
    <string name="dionathan">Voluntário: Dionathan Toillier (dionathantoillier20@gmail.com)</string>
    <string name="matheus">Matheus Bonet</string>
</resources>
