<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.seifai.test.ui.DetalheItemFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1" >

            <ImageView
                android:id="@+id/imagem_livro"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:id="@+id/txtTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autor"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/txtAutor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resumo"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/txtResumo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lblClassificacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/classificacao"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/txtClassificacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cutter"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/txtCutter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/observacao" />

                <TextView
                    android:id="@+id/txtObservacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" />
            </TableRow>

            <LinearLayout>
                <RatingBar
                    android:id="@+id/avaliacaoLivro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:numStars="5"
                    android:rating="1.0"
                    android:stepSize="1.0" />
            </LinearLayout>

            <TableRow>

                <Button
                    android:id="@+id/editarLivro"
                    android:text="@string/editar"
                    android:layout_marginTop="20dp"/>

                <Button
                    android:id="@+id/removerLivro"
                    android:text="@string/remover"
                    android:layout_marginTop="20dp"/>
            </TableRow>

        </TableLayout>
    </ScrollView>
</FrameLayout>
