<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_conteudo"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2E8B57">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="575dp"
        android:id="@+id/layout"
        android:background="#FF8C00">

        <ImageView
            android:id="@+id/imagem_livro"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_below="@+id/imagem_livro"
            android:layout_centerHorizontal="true">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:layout_above="@+id/txtAutor"
            android:layout_alignLeft="@+id/lblAutor"
            android:layout_alignStart="@+id/lblAutor" />

        <EditText
            android:id="@+id/txtAutor"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtTitulo"
            android:layout_below="@+id/txtTitulo"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autor"
            android:layout_above="@+id/txtClassificacao"
            android:layout_alignLeft="@+id/lblClassificacao"
            android:layout_alignStart="@+id/lblClassificacao" />
        <TextView
            android:id="@+id/lblClassificacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classificacao"
            android:layout_above="@+id/txtCutter"
            android:layout_alignRight="@+id/imagem_livro"
            android:layout_alignEnd="@+id/imagem_livro" />

        <EditText
            android:id="@+id/txtClassificacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_below="@+id/txtAutor"
            android:layout_alignLeft="@+id/txtAutor"
            android:layout_alignStart="@+id/txtAutor">
        </EditText>

        <TextView
            android:id="@+id/lblCutter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cutter"
            android:layout_alignBottom="@+id/txtCutter"
            android:layout_alignLeft="@+id/lblClassificacao"
            android:layout_alignStart="@+id/lblClassificacao" />

        <EditText
            android:id="@+id/txtCutter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_below="@+id/txtClassificacao"
            android:layout_alignLeft="@+id/txtClassificacao"
            android:layout_alignStart="@+id/txtClassificacao">
            </EditText>


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resumo"
            android:layout_above="@+id/txtObservacao"
            android:layout_alignLeft="@+id/lblCutter"
            android:layout_alignStart="@+id/lblCutter" />

        <EditText
            android:id="@+id/txtResumo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:layout_below="@+id/lblCutter"
            android:layout_alignLeft="@+id/txtCutter"
            android:layout_alignStart="@+id/txtCutter" />

        <TextView
            android:id="@+id/lblObservacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observacao"
            android:layout_alignBottom="@+id/txtObservacao"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignStart="@+id/textView1" />

        <RatingBar
            android:id="@+id/avaliacaoLivro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="1.0"
            android:stepSize="1.0"
            android:layout_below="@+id/lblAvaliacao"
            android:layout_alignLeft="@+id/lblObservacao"
            android:layout_alignStart="@+id/lblObservacao" />

        <TextView
            android:id="@+id/lblAvaliacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avaliacao"
            android:layout_below="@+id/lblObservacao"
            android:layout_alignLeft="@+id/avaliacaoLivro"
            android:layout_alignStart="@+id/avaliacaoLivro" />

        <Button
            android:id="@+id/btnAdicionar"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/adicionar"
            android:textSize="15sp"
            android:layout_below="@+id/avaliacaoLivro"
            android:layout_alignLeft="@+id/avaliacaoLivro"
            android:layout_alignStart="@+id/avaliacaoLivro" />

        <Button
            android:id="@+id/btnInserirImagem"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/inserir_imagem"
            android:layout_above="@+id/txtTitulo"
            android:layout_alignLeft="@+id/txtTitulo"
            android:layout_alignStart="@+id/txtTitulo" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtObservacao"
            android:layout_alignLeft="@+id/txtResumo"
            android:layout_alignStart="@+id/txtResumo"
            android:layout_below="@+id/txtResumo"
            android:layout_alignRight="@+id/txtResumo"
            android:layout_alignEnd="@+id/txtResumo" />
    </RelativeLayout>

</ScrollView>